data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_559.wast
;; - **Test 10**:    Set up a loop containing floating-point operations that depend on an approximation leading to non-breaking condition (e.g., looping while a number is not zero, but the approximation never exactly hits zero).     Constraint: Floating-point approximation causing infinite loop.     Relation: Shows impact of precision error leading to infinite loop.

(assert_invalid
  (module
    (func $test
      (loop (result f32)
        (local f32)
        (local.set 0 (f32.const 1.0))
        (loop
          (local.set 0
            (f32.mul (local.get 0) (f32.const 0.5))
          )
          (br_if 0
            (f32.ne (local.get 0) (f32.const 0.0))
          )
        )
      )
    )
  )
  "type mismatch"
)